@@ -45,6 +45,9 @@ Scott Koranda
 Phil Hands
 jordonwii (http://code.google.com/u/jordonwii)
 Carlos Saraiva
+Rich Newpol
+Marcus Brinkmann <marcus.brinkmann@ruhr-uni-bochum.de>
+
 
 Erik gets a special mention for the contribution of the "Showcase".
 
