@@ -46,6 +46,8 @@ Copyright: 2009 Carl Roach <carl.roach@gmail.com>
 Copyright: 2009 Sujan Shakya
 Copyright: 2009 Klavdij Voncina <voncina.klavdij@siol.net>
 Copyright: 2009 Scott Koranda <skoranda@gmail.com>
+Copyright: 2009 Rich Newpol (http://code.google.com/u/rich.newpol/)
+Copyright: 2009 Marcus Brinkmann <marcus.brinkmann@ruhr-uni-bochum.de>
 
 Files: examples/flowpanel/*
 Copyright: 2009 jordonwii (http://code.google.com/u/jordonwii)
