@@ -1,0 +1,15 @@
+<html>
+<!-- auto-generated html - you should consider editing and
+adapting this to suit your requirements
+-->
+<head>
+<meta name="pygwt:module" content="ClickableRootPanel">
+<link rel='stylesheet' href='Hello.css'>
+
+<title>PyJamas Auto-Generated HTML file ClickableRootPanel</title>
+</head>
+<body bgcolor="white">
+<script language="javascript" src="bootstrap.js"></script>
+<iframe id='__pygwt_historyFrame' style='width:0;height:0;border:0'></iframe>
+</body>
+</html>
