@@ -1,0 +1,15 @@
+.teststyle {
+  margin: 10px;
+  padding: 10px;
+  background-color: #00ff00;
+}
+
+.rootstyle {
+  margin: 100px;
+  padding: 0px;
+  border: 5px solid #000000;
+  background-color: #fcfcf0;
+  width: 100%;
+  font-size: 10px;
+}
+
