@@ -1,0 +1,14 @@
+ok i've created the beginnings of a uitest.
+
+* run with pyjd to 'create' the tests (once):
+   python uitest.py public
+
+* do an svn diff to make sure that test output already committed hasn't changed (unless it was a bug!)
+
+* do svn add public/*.txt
+
+* commit
+
+to run the test to confirm, just do python uitest.py, or build them
+with pyjs (build.sh)
+
