@@ -1,0 +1,1 @@
+<button type="button" class="gwt-Button">Click Me</button>
