@@ -10,5 +10,7 @@
 <body bgcolor="white"><pre>Unit Tests will appear and disappear.</pre>
 <script language="javascript" src="bootstrap.js"></script>
 <div id='tests'></div>
+<div id='testcompare1'></div>
+<div id='testcompare2'></div>
 </body>
 </html>
