@@ -1,6 +1,11 @@
                     Changes made to Pyjamas since 0.6
                     ---------------------------------
 
+ * Added str.isalpha and str.isupper, thanks to Marcus Brinkmann
+
+ * Modified bootstrap.py: place absolute path in pyjsbuild.bat file to
+   reference python.exe direct (thanks to Rich Newpol) closes #324
+
  * Added FlowPanel demo from jordanwii showing how you have to use
    a span element to Label to get round a CSS IE hack issue
 
